# HCS

./: .gitignore
Lab1/: Lab1.sln
Lab1/Lab1/: CMakeLists.txt  Lab1.vcxproj  kernel.cu  kernel.cuh  test.cu
Lab1/Lab1/cuda-sample1-test/: test.cu
Lab1/Lab1/inc/: CMakeLists.txt  kernel.cu
lab2/demo/: CMakeLists.txt  demo.cu
lab2/demo/lib/: scmp.cu
lab2/demoExt/: scmp.cu  test.py
lab2/demoPy/: demo.cu  mymuladd.cpp  scmp.cu  setup.py
lab2/demoPy/ghfksdjh/: scmp.cu  y.py
lab2/demoPy2/: README.md  Requirements.txt  bench_cudo.py  bridge.cpp  scmp.cu  setup.py  test.py
lab2/demoPy2/lab2.egg-info/: PKG-INFO  SOURCES.txt
lab3/: README.md  bench_cudo.py  lib.cu  module.py  moduleNew.py  setup.py  test.py  test_new.py
